--- a/install.html
+++ b/install.html
@@ -57,8 +57,8 @@
 			</dl>
 			<dl>
 				<dt>Download Links - Stable(ish) Version (hotlinking allowed)</dt>
-				<dd><a rel="external" href="http://dev.jtsage.com/cdn/alertbox/1.4.0/jqm-1.4.0-alertbox.js">Uncompressed, Development Version Plugin</a></dd>
-				<dd><a rel="external" href="http://dev.jtsage.com/cdn/alertbox/1.4.0/jqm-1.4.0-alertbox.min.js">Compressed, Production Version Plugin</a></dd>
+				<dd><a rel="external" href="http://dev.jtsage.com/cdn/alertbox/1.4.0/jqm-alertbox-1.4.0.js">Uncompressed, Development Version Plugin</a></dd>
+				<dd><a rel="external" href="http://dev.jtsage.com/cdn/alertbox/1.4.0/jqm-alertbox-1.4.0.min.js">Compressed, Production Version Plugin</a></dd>
 				<dd><strong>Note:</strong>The current version is also my first real stop on the development path.  If you have a mission critical app, it is *highly* recommended that you either link to the compressed version, or better yet, a copy on your own server</dd>
 			</dl>
 			<dl>
